few changed in html, css

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           </div>
         </div>
         <section id="section07" class="demo">
-          <a href="#section08"><span></span><span></span><span></span></a>
+          <a href="#projects"><span></span><span></span><span></span></a>
         </section>
       </div>  
     </div>
 
     <!-- Projects -->
 
-    <div class="container">
+    <div id="projects" class="container">
       <div class="row">
         <h2>Projects</h2>
       </div>
