--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 
     <!-- Projects -->
 
-    <div id="projects" class="container">
+    <!-- <div id="projects" class="container">
       <div class="row">
-        <h2>Projects</h2>
+        <div class="div col-12">
+          <h2>My Projects</h2>
+
+        </div>
       </div>
-    </div>
+    </div> -->
 
     
   <script src="./script.js"></script>
